chore(docker): own gemfile for all containers

--- a/docker/3.0/Dockerfile
+++ b/docker/3.0/Dockerfile
@@ -6,4 +6,11 @@ WORKDIR /gem
 
 COPY . /gem
 
+##
+# NOTE: Every container has its own copy of `Gemfile'. This way a developer doesn't need to delete `Gemfile.lock' all the time when changing containers.
+# - https://docs.docker.com/engine/reference/builder/#env
+# - https://stackoverflow.com/questions/48863711/is-it-possible-to-override-gemfile-for-local-development
+#
+ENV BUNDLE_GEMFILE=Gemfile.3.0
+
 RUN bundle install
