--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,10 +99,10 @@ jobs:
       ##
       # TODO: Rake tasks to abstract away all params.
       #
-      - name: Run RSpec
-        run: bundle exec rake rspec
+      - name: Run RSpec without appraisals
+        run: bundle exec rake standard:rspec
       - name: Install dependencies for appraisals
-        run: bundle exec appraisal install
+        run: bundle exec rake deps:install
       - name: Run RSpec with Rails 5.2
         run: bundle exec rake rails_5.2:rspec
       - name: Run RSpec with Rails 6.0
@@ -137,7 +137,7 @@ jobs:
       # IMPORTANT: 'coverage/**/lcov.info' single quotes are mandatory.
       #
       - name: Merge coverage reports into single file
-        run: npx --yes lcov-result-merger 'coverage/**/lcov.info' coverage/lcov.info
+        run: bundle exec rake coverage:lcov:merge
       - name: Configure coverage reports for Coveralls
         uses: coverallsapp/github-action@master
         with:
