--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,8 @@ version: '3'
 # NOTE: Examples of multiline strings in YAML.
 # https://yaml-multiline.info/
 #
+# NOTE: Use `[ "${IN_DOCKER_CONTAINER}" == "true" ] && echo true || echo false' to debug ``[ "${IN_DOCKER_CONTAINER}" == "true" ]'.
+#
 tasks:
   default:
     cmds:
@@ -20,7 +22,7 @@ tasks:
     cmds:
       - open coverage/index.html
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   deps:install:
@@ -33,7 +35,7 @@ tasks:
       - docker run --rm -it -v $(pwd):/gem convenient_service:2.7 bash
     interactive: true
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docker:bash:ruby_3.0:
@@ -41,7 +43,7 @@ tasks:
       - docker run --rm -it -v $(pwd):/gem convenient_service:3.0 bash
     interactive: true
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docker:bash:ruby_3.1:
@@ -49,7 +51,7 @@ tasks:
       - docker run --rm -it -v $(pwd):/gem convenient_service:3.1 bash
     interactive: true
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docker:build:
@@ -58,28 +60,28 @@ tasks:
       - task: docker:build:ruby_3.0
       - task: docker:build:ruby_3.1
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docker:build:ruby_2.7:
     cmds:
       - docker build . -f docker/2.7/Dockerfile -t convenient_service:2.7
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docker:build:ruby_3.0:
     cmds:
       - docker build . -f docker/3.0/Dockerfile -t convenient_service:3.0
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docker:build:ruby_3.1:
     cmds:
       - docker build . -f docker/3.1/Dockerfile -t convenient_service:3.1
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   docs:generate:
@@ -90,17 +92,17 @@ tasks:
     cmds:
       - open docs/index.html
     preconditions:
-      - bash: '[ "${IN_DOCKER_CONTAINER}" == "true" ]'
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   rspec:
     cmds:
-      - task: standard:rspec
-      - task: rails_5.2:rspec
-      - task: rails_6.0:rspec
-      - task: rails_6.1:rspec
-      - task: rails_7.0:rspec
-      - task: dry:rspec
+      - task: rspec:standard
+      - task: rspec:rails_5.2
+      - task: rspec:rails_6.0
+      - task: rspec:rails_6.1
+      - task: rspec:rails_7.0
+      - task: rspec:dry
 
   rspec:dry:
     cmds:
