--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,6 +14,11 @@ tasks:
     cmds:
       - task: rspec
 
+  console:all:
+    cmds:
+      - bundle exec appraisal all bin/console
+    interactive: true
+
   console:dry:
     cmds:
       - bundle exec appraisal dry bin/console
