--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,6 +9,9 @@ version: '3'
 #
 # NOTE: Use `[ "${IN_DOCKER_CONTAINER}" == "true" ] && echo true || echo false' to debug ``[ "${IN_DOCKER_CONTAINER}" == "true" ]'.
 #
+# NOTE: Forwarding CLI arguments to commands ({{.CLI_ARGS}}).
+# https://taskfile.dev/usage/#forwarding-cli-arguments-to-commands
+#
 tasks:
   default:
     cmds:
@@ -146,28 +149,28 @@ tasks:
 
   rspec:dry:
     cmds:
-      - bundle exec appraisal dry rspec --format progress --require dry_helper
+      - bundle exec appraisal dry rspec --format progress --require dry_helper {{.CLI_ARGS}}
 
   rspec:rails_5.2:
     cmds:
-      - bundle exec appraisal rails_5.2 rspec --format progress --require rails_helper
+      - bundle exec appraisal rails_5.2 rspec --format progress --require rails_helper {{.CLI_ARGS}}
 
   rspec:rails_6.0:
     cmds:
-      - bundle exec appraisal rails_6.0 rspec --format progress --require rails_helper
+      - bundle exec appraisal rails_6.0 rspec --format progress --require rails_helper {{.CLI_ARGS}}
 
   rspec:rails_6.1:
     cmds:
-      - bundle exec appraisal rails_6.1 rspec --format progress --require rails_helper
+      - bundle exec appraisal rails_6.1 rspec --format progress --require rails_helper {{.CLI_ARGS}}
 
   rspec:rails_7.0:
     cmds:
-      - bundle exec appraisal rails_7.0 rspec --format progress --require rails_helper
+      - bundle exec appraisal rails_7.0 rspec --format progress --require rails_helper {{.CLI_ARGS}}
 
   rspec:standard:
     cmds:
-      - bundle exec rspec --format progress
+      - bundle exec rspec --format progress {{.CLI_ARGS}}
 
   rubocop:
     cmds:
-      - bundle exec rubocop --config .rubocop.yml
+      - bundle exec rubocop --config .rubocop.yml {{.CLI_ARGS}}
