docs(yard): replace sdoc(rdoc) by yard

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -93,9 +93,28 @@ tasks:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
+  ##
+  # NOTE: `sdoc' (wrapper for `rdoc') is replaced by `yard', since you have a feeling like every time is a first time with `rdoc'.
+  # - https://kapeli.com/cheat_sheets/Yard.docset/Contents/Resources/Documents/index
+  # - https://rubydoc.info/gems/yard/file/README.md
+  # - `yardoc --help'
+  #
+  # NOTE: `commonmarker' supports GitHub Flavored Markdown.
+  # - https://github.com/gjtorikian/commonmarker
+  # - https://github.github.com/gfm/
+  # - https://github.com/github/markup#markups
+  # - https://github.com/lsegal/yard/pull/1388
+  #
+  # TODO: Contribute. Forward `--parse-option LIBERAL_HTML_TAG' to commonmarker.
+  #
   docs:generate:
     cmds:
-      - bundle exec sdoc lib -T rails -o docs --github
+      - bundle exec yardoc 'lib/**/*.rb' --markup markdown --markup-provider commonmarker --output-dir docs - README.md
+
+  docs:generate:open:
+    cmds:
+      - task: docs:generate
+      - task: docs:open
 
   docs:open:
     cmds:
