--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -67,11 +67,20 @@ tasks:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
+  docker:bash:ruby_3.2:
+    cmds:
+      - docker run --rm -it -v $(pwd):/gem convenient_service:3.2 bash
+    interactive: true
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
   docker:build:
     cmds:
       - task: docker:build:ruby_2.7
       - task: docker:build:ruby_3.0
       - task: docker:build:ruby_3.1
+      - task: docker:build:ruby_3.2
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
@@ -123,6 +132,23 @@ tasks:
       - rm Gemfile.3.1.lock 2> /dev/null || true
       - cp Gemfile Gemfile.3.1
       - docker build . -f docker/3.1/Dockerfile -t convenient_service:3.1
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
+  docker:build:ruby_3.2:
+    cmds:
+      ##
+      # NOTE: Meaning of `|| 2> /dev/null`.
+      # https://stackoverflow.com/a/10250395/12201472
+      #
+      # NOTE: Meaning of `|| true`.
+      # https://superuser.com/a/887349/1180656
+      #
+      - rm Gemfile.3.2 2> /dev/null || true
+      - rm Gemfile.3.2.lock 2> /dev/null || true
+      - cp Gemfile Gemfile.3.2
+      - docker build . -f docker/3.2/Dockerfile -t convenient_service:3.2
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
