--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -75,12 +75,25 @@ tasks:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
+  ##
+  # NOTE: JRuby 9.4 is CRuby 3.1 compatible.
+  # - https://www.jruby.org/download
+  #
+  docker:bash:jruby_9.4:
+    cmds:
+      - docker run --rm -it -v $(pwd):/gem convenient_service:jruby-9.4 bash
+    interactive: true
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
   docker:build:
     cmds:
       - task: docker:build:ruby_2.7
       - task: docker:build:ruby_3.0
       - task: docker:build:ruby_3.1
       - task: docker:build:ruby_3.2
+      - task: docker:build:jruby_9.4
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
@@ -149,6 +162,27 @@ tasks:
       - rm Gemfile.3.2.lock 2> /dev/null || true
       - cp Gemfile Gemfile.3.2
       - docker build . -f docker/3.2/Dockerfile -t convenient_service:3.2
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
+  ##
+  # NOTE: JRuby 9.4 is CRuby 3.1 compatible.
+  # - https://www.jruby.org/download
+  #
+  docker:build:jruby_9.4:
+    cmds:
+      ##
+      # NOTE: Meaning of `|| 2> /dev/null`.
+      # https://stackoverflow.com/a/10250395/12201472
+      #
+      # NOTE: Meaning of `|| true`.
+      # https://superuser.com/a/887349/1180656
+      #
+      - rm Gemfile.jruby-9.4 2> /dev/null || true
+      - rm Gemfile.jruby-9.4.lock 2> /dev/null || true
+      - cp Gemfile Gemfile.jruby-9.4
+      - docker build . -f docker/jruby-9.4/Dockerfile -t convenient_service:jruby-9.4
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
