--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,15 @@ jobs:
           - "3.0"
           - 3.1
           - 3.2
+        jruby:
+          ##
+          # NOTE: List of all possible JRuby versions.
+          # https://github.com/ruby/setup-ruby/blob/master/ruby-builder-versions.json
+          #
+          # NOTE: JRuby 9.4 is CRuby 3.1 compatible.
+          # - https://www.jruby.org/download
+          #
+          - 9.4
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
 
