chore(truffleruby): add TruffleRuby 22.3

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -76,12 +76,24 @@ tasks:
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   ##
-  # NOTE: JRuby 9.4 is CRuby 3.1 compatible.
+  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
   # - https://www.jruby.org/download
   #
   docker:bash:jruby_9.4:
     cmds:
       - docker run --rm -it -v $(pwd):/gem convenient_service:jruby-9.4 bash
+    interactive: true
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
+  ##
+  # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
+  # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
+  #
+  docker:bash:truffleruby_22.3:
+    cmds:
+      - docker run --rm -it -v $(pwd):/gem convenient_service:truffleruby-22.3 bash
     interactive: true
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
@@ -94,6 +106,7 @@ tasks:
       - task: docker:build:ruby_3.1
       - task: docker:build:ruby_3.2
       - task: docker:build:jruby_9.4
+      - task: docker:build:truffleruby_22.3
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
@@ -167,7 +180,7 @@ tasks:
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   ##
-  # NOTE: JRuby 9.4 is CRuby 3.1 compatible.
+  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
   # - https://www.jruby.org/download
   #
   docker:build:jruby_9.4:
@@ -183,6 +196,27 @@ tasks:
       - rm Gemfile.jruby-9.4.lock 2> /dev/null || true
       - cp Gemfile Gemfile.jruby-9.4
       - docker build . -f docker/jruby-9.4/Dockerfile -t convenient_service:jruby-9.4
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
+  ##
+  # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
+  # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
+  #
+  docker:build:truffleruby_22.3:
+    cmds:
+      ##
+      # NOTE: Meaning of `|| 2> /dev/null`.
+      # https://stackoverflow.com/a/10250395/12201472
+      #
+      # NOTE: Meaning of `|| true`.
+      # https://superuser.com/a/887349/1180656
+      #
+      - rm Gemfile.truffleruby-22.3 2> /dev/null || true
+      - rm Gemfile.truffleruby-22.3.lock 2> /dev/null || true
+      - cp Gemfile Gemfile.truffleruby-22.3
+      - docker build . -f docker/truffleruby-22.3/Dockerfile -t convenient_service:truffleruby-22.3
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
