--- a/.dev/.tmuxinator.yml
+++ b/.dev/.tmuxinator.yml
@@ -13,5 +13,6 @@ windows:
       panes:
         - task docker:bash:ruby_2.7
         - task docker:bash:ruby_3.0
-        - task docker:bash:ruby_3.1
+        - task docker:bash:jruby_9.4
+        - task docker:bash:truffleruby_22.3
         - git status
