chore(minitest): introduce minitest

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -301,6 +301,13 @@ tasks:
       - task: rubocop
       - task: docs:lint
 
+  ##
+  # TODO: Add to CI.
+  #
+  minitest:
+    cmds:
+      - bundle exec ruby minitest.rb
+
   playground:
     cmds:
       - bundle exec rake playground
