--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -263,8 +263,7 @@ tasks:
 
   docs:lint:
     cmds:
-      - mkdir -p docs
-      - bundle exec yard-junk --text --html docs/junk-yard.html
+      - task: yard_junk
 
   docs:missed:
     cmds:
@@ -472,3 +471,8 @@ tasks:
   tmuxinator:start:
     cmds:
       - tmuxinator start convenient_service --project-config=.dev/.tmuxinator.yml
+
+  yard_junk:
+    cmds:
+      - mkdir -p docs
+      - bundle exec yard-junk --text --html docs/junk-yard.html
